added header and footer views

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>todo list</title>
-</head>
-<body>
+<%- include("header") -%>
+
     <div class="box" id="heading">
         <h1> <%= listTitle %> </h1>
     </div>
@@ -21,9 +14,8 @@
 
             <form class="item" action="/" method="post">
                 <input placeholder="New Item" type="text" name="newItem" autocomplete="off">
-                <button type="submit" name="button">+</button>
+                <button type="submit" name="list" value="<%= listTitle %>">+</button>
             </form>
     </div>
     
-</body>
-</html>
+<%- include("footer") -%>
